--- a/replayer_template.html
+++ b/replayer_template.html
@@ -1,4 +1,4 @@
-  <link rel="stylesheet" href="css/chessboard-0.3.0.css" />
+ <link rel="stylesheet" href="css/chessboard-0.3.0.css" />
 
 <script src="js/chess.js"></script>
 <script src="js/chessboard-0.3.0.js"></script>
@@ -7,6 +7,7 @@
 <script src="js/chess.blunder.functions.js"></script>
 <script src="js/chess.blunder.js"></script>
 <script src="js/pregen/{{pregen_js_name}}"></script>
+<!--info: from https://github.com/ernop/chessui-960 -->
 
 <style>
 body{font-family:calibri;}
