--- a/replayer_template.html
+++ b/replayer_template.html
@@ -1,11 +1,13 @@
- <link rel="stylesheet" href="chessincludes/css/chessboard-0.3.0.css" />
+<!--start header zone-->
 
-<script src="chessincludes/js/chess.js"></script>
-<script src="chessincludes/js/chessboard-0.3.0.js"></script>
-<script src="chessincludes/js/jquery.js"></script>
-<script src="chessincludes/js/chess.blunder.util.js"></script>
-<script src="chessincludes/js/chess.blunder.functions.js"></script>
-<script src="chessincludes/js/chess.blunder.js"></script>
+ <link rel="stylesheet" href="css/chessboard-0.3.0.css" />
+
+<script src="js/chess.js"></script>
+<script src="js/chessboard-0.3.0.js"></script>
+<script src="js/jquery.js"></script>
+<script src="js/chess.blunder.util.js"></script>
+<script src="js/chess.blunder.functions.js"></script>
+<script src="js/chess.blunder.js"></script>
 <!--info: from https://github.com/ernop/chessui-960 -->
 
 <style>
@@ -39,7 +41,7 @@ body{font-family:calibri;}
 .pvzone{}
 .pvmove{margin:4px;display:inline-block;background-color:lightgrey;padding:3px;cursor:pointer;border-radius:4px;border:4px solid grey;}
 .examining-var{background-color:orange;}
-#varzone{display:inline-block;margin-top:5px;height:100px;width:510px;}
+#varzone{display:inline-block;margin-top:5px;height:450px;width:510px;}
 .medium{font-weight:bold;font-size:1.4em;}
 #pv{height:50px;display:inline-block;}
 #game-navzone{margin-top:10px;}
@@ -52,45 +54,51 @@ $(document).ready(function(){
     start_blunder();
     })
 </script>
+<!--end header  zone-->
 </head>
 
 <body style="width:850px;margin:0 auto;">
-<script src="js/pregen/{{pregen_js_name}}"></script>
+
+
 <div class="main">
-<div class="medium" style="float:right;margin-right:210px;">Move Values</div>
-<div style="clear:both;" id=blunderinfo></div>
-<div id="board" style="width: 400px;display:inline-block;"></div>
-<div id="game-navzone">
-    <div id="navigate-back" class="button">back</div>
-    <div id="navigate-forward" class="button">forward</div>
+    <!--start body rst page -->
+    <script src="js/pregen/{{pregen_js_name}}"></script>
+    <div class="medium" style="float:right;margin-right:210px;">Move Values</div>
+    <div style="clear:both;" id=blunderinfo></div>
+    <div id="board" style="width: 400px;display:inline-block;"></div>
+    <div id="game-navzone">
+        <div id="navigate-back" class="button">back</div>
+        <div id="navigate-forward" class="button">forward</div>
+    </div>
+
+    <br>
+    <div id="varzone"><span id="pv">&nbsp;</span>
+    </div>
+
+    <p style="display:none;">FEN: <span id="fen"></span></p>
+    <p style="display:none;">PGN: <span id="pgn"></span></p>
+    <p style="display:none;">Code: <span id="code"></span></p>
+
+
+    <p>Status: <span id="status"></span>
+    <div id=flipper class="littlebutton" style="float:left;clear:both;">flip board</div><script>$(document).ready(function(){$("#flipper").click(function(){board.flip()})})</script></p>
+    <br>
+    <div class="explanation" style="float:left;clear:both;">An engine has analyzed the game, finding the best move, the value of the move played, and other good potential moves, for every position.
+
+    <table id="color-explanation"><tr>
+        <td class="played" style="border:5px solid purple;">The purple bordered move is the move actually played.
+        <td class="bestmove">Best Move
+        <td class="green">Loses less than 0.05 pawns
+        <td class="lgreen">Loses less than 0.1 pawns
+        <td class="llgreen">Loses less than 0.25 pawns
+        <td class="lblue">Loses less than 0.5 pawns
+        <td class="blue">Loses less than 1 pawns
+        <td class="red">Loses less than 2 pawns
+        <td class="rred">Loses less than 3 pawns
+        <td class="rrred">Loses more than 3 pawns
+    </table>
+    <!--end body copy text. -->
 </div>
-
-<br>
-<div id="varzone"><span id="pv">&nbsp;</span>
-</div>
-
-<p style="display:none;">FEN: <span id="fen"></span></p>
-<p style="display:none;">PGN: <span id="pgn"></span></p>
-<p style="display:none;">Code: <span id="code"></span></p>
-
-
-<p>Status: <span id="status"></span>
-<div id=flipper class="littlebutton" style="float:left;clear:both;">flip board</div><script>$(document).ready(function(){$("#flipper").click(function(){board.flip()})})</script></p>
-<br>
-<p>An engine has analyzed the game, finding the best move, the value of the move played, and other good potential moves, for every position.
-
-<table id="color-explanation"><tr>
-    <td class="played" style="border:5px solid purple;">The purple bordered move is the move actually played.
-    <td class="bestmove">Best Move
-    <td class="green">Loses less than 0.05 pawns
-    <td class="lgreen">Loses less than 0.1 pawns
-    <td class="llgreen">Loses less than 0.25 pawns
-    <td class="lblue">Loses less than 0.5 pawns
-    <td class="blue">Loses less than 1 pawns
-    <td class="red">Loses less than 2 pawns
-    <td class="rred">Loses less than 3 pawns
-    <td class="rrred">Loses more than 3 pawns
-</table>
 
 </div>
 </body>
